2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx,
 test/unit/test_prepared_statement:
 - Unnamed prepared statements require PQprepare().
 - Bugfix: unnamed prepared statement kept using its first definition.
 include/pqxx/result.hxx:
 - Fix up PQAlloc deletion handling if shared_ptr not available.
 src/connection_base.cxx:
 - Conditionally-compiled code wasn't using the proper gate.
2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Substitute full version information.
 doc/Doxyfile.in, src/util.cxx:
 - Make Doxygen see through some cpp macros and such that get in the way.
 - Removed obsolete Doxygen directive DETAILS_AT_TOP.
 src/transaction_base.cxx:
 - gcc 3.3 stumbles over foo_gate(bar).splat()
2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
 - Get ABI version as well as library version.
 - Single "substitute" function for configure.ac and version header.
 doc/Doxyfile.in:
 - Don't generate huge HTML versions of source, thanks Eugene V. Lyubimkin.
 include/pqxx/result.hxx, include/pqxx/util.hxx src/connection_base.cxx,
 src/util.cxx:
 - Clean up deleter handling in PQAlloc, thanks Kirit Saelensminde.
 - Should fix a case of mismatched allocation/deallocation.
 include/pqxx/version.hxx.template:
 - Include ABI version.
 src/Makefile.am:
 - Version according to ABI version, not full library version.
 tools/extract_version:
 - New --abi option to extract library ABI version.
 - New --help option.
2009-07-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/largeobject.hxx:
 - Fixed compile warnings on some 32-bit configurations.
2009-06-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/libpqxx.xml:
 - Fixed mistake in tutorial example.  Thanks Patrick Daryll Glandien.
 - Closes #187.
2009-06-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/preprelease:
 - Don't build tarball again.
 - Deal with changed "make check" output.
 - Clean up and rebuild reference documentation.