@@ -31,21 +31,21 @@ nobase_include_HEADERS= pqxx/pqxx \
 	pqxx/trigger pqxx/trigger.hxx \
 	pqxx/util pqxx/util.hxx \
 	pqxx/version pqxx/version.hxx \
-	pqxx/internal/connection-dbtransaction-gate.hxx \
-	pqxx/internal/connection-largeobject-gate.hxx \
-	pqxx/internal/connection-notify-listener-gate.hxx \
-	pqxx/internal/connection-pipeline-gate.hxx \
-	pqxx/internal/connection-prepare-declaration-gate.hxx \
-	pqxx/internal/connection-prepare-invocation-gate.hxx \
-	pqxx/internal/connection-sql_cursor-gate.hxx \
-	pqxx/internal/connection-transaction-gate.hxx \
-	pqxx/internal/result-connection-gate.hxx \
-	pqxx/internal/result-creation-gate.hxx \
-	pqxx/internal/result-sql_cursor-gate.hxx \
-	pqxx/internal/transaction-subtransaction-gate.hxx \
-	pqxx/internal/transaction-tablereader-gate.hxx \
-	pqxx/internal/transaction-tablewriter-gate.hxx \
-	pqxx/internal/transaction-transactionfocus-gate.hxx
+	pqxx/internal/gates/connection-dbtransaction-gate.hxx \
+	pqxx/internal/gates/connection-largeobject-gate.hxx \
+	pqxx/internal/gates/connection-notify-listener-gate.hxx \
+	pqxx/internal/gates/connection-pipeline-gate.hxx \
+	pqxx/internal/gates/connection-prepare-declaration-gate.hxx \
+	pqxx/internal/gates/connection-prepare-invocation-gate.hxx \
+	pqxx/internal/gates/connection-sql_cursor-gate.hxx \
+	pqxx/internal/gates/connection-transaction-gate.hxx \
+	pqxx/internal/gates/result-connection-gate.hxx \
+	pqxx/internal/gates/result-creation-gate.hxx \
+	pqxx/internal/gates/result-sql_cursor-gate.hxx \
+	pqxx/internal/gates/transaction-subtransaction-gate.hxx \
+	pqxx/internal/gates/transaction-tablereader-gate.hxx \
+	pqxx/internal/gates/transaction-tablewriter-gate.hxx \
+	pqxx/internal/gates/transaction-transactionfocus-gate.hxx
 
 
 nobase_nodist_include_HEADERS = \
