@@ -1,4 +1,7 @@
 2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/Makefile.am, include/pqxx/internal/*, src/*.cxx:
+ - Moved "gate" headers into include/pqxx/internal/gates.
+2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/connection_base.hxx, src/connection_base.cxx,
  test/unit/test_prepared_statement:
  - Unnamed prepared statements require PQprepare().
